﻿See https://github.com/MarcusWolschon/osmeditor4android/ for documentation on this version and all changes.

1245: Fix regression in handling multi-select values, testing improvements.

1244: EasyEdit consistency improvements, bug fixes and more test coverage.

1243: Improved JOSM style remote control, added some documentation on supported Intents.

1239: Update default preset, imagery and translations, fix regression wrt discarding useless tags, fix various smaller issues.

1237: Improved functionality for tag filter, fixed issues with tag filter UI.

1236: Fix regression disabling tag only mode, add some initial filter tests-  

1235: Build again Android N, API 24, fix OAuth with API instances on systems using SNI, improve test coverage, better messaging in case of API errors, fix various issues with the tag filter UI and add some documentation, robustness fixes. 

1231: Add button on the debug screen to force send a crash dump.

1230: Fix various issues with selecting the preset button in way creation mode.

1229: Updated imagery, auto-split changesets that are too large, minor bug fixes.

1227: Updated presets, translations and imagery, minor bug fixes.

1225: Lots of internal clean up, partially validate API URLs, documentation updates, change header color in the property editor light theme.

1224: Fix life cycle issues in PropertyEditor, potential fix for issue when data is not loaded.

1223: Fix regression with long press when screen is locked, another attempt at trying to make the element info dialog look right.

1222: Fix issue with new installs, moved code to standard android layout. 

1221: Add support for multiple geocoders, currently supported APIs: Nominatim and Photon, code cleanup.

1220: Increase version to 0.9.9, updated translations and release notes, remove sv-SE (just use sv), add filter facility, and indoor mode, add tag based filtering, fix numerous small issues, change way geometry improvement handles work.  
