@@ -26,9 +26,16 @@ The tradeoff is that now more care has to be exercised when dragging ways.
 
 The filter can be enable from the normal main menu, the filter can then be changed by tapping the filter icon. More documentation can be found on device or [here](https://github.com/MarcusWolschon/osmeditor4android/blob/master/documentation/docs/help/en/Tag%20filter.md).
 
+## Scripting
+
+Presets now support a "javascript" property that allows a script to manipulate tags, for example a "last_update" tag can be auto filled with the current date. Outside of the use in presets scripts can be run in an expanded mode via the "JS Console", this is currently of limited usefulness as there is no easy way to store and retrieve scripts, however it is intended to add that (and documentation) for release.
+
 ## Miscellaneous 
 
  * the "Find" search function now supports Photon based geocoders. The default configuration of the OSMF Nominatim and komoots Photon instances can be changed in the advanced preferences.
+ * presets support a "deprecated" property that allows them to be matched for the map display and in the form-based tag editor, but they are not offered and found for new use.
+ * support for opening a photo viewer in the adjacent window on Android N and later.
+ * a lot of work has been done to make it easier to contribute to Vespucci, this includes migrating to the new standard Android project layout, making more operations available via gradle tasks and adding tests for a substantial part of the code.
 
 The full change log is available [here](https://github.com/MarcusWolschon/osmeditor4android/commits/master)
 
