@@ -46,6 +46,7 @@ __&lt;text&gt;__             |                               | supported |
                    | auto_increment                | ignored   |
                    | length                        | ignored   |
                    | alternative_autocomplete_keys | ignored   |
+                   | javascript                    | extension | if value is not set, execute the JS script
 __&lt;combo&gt;__            |                               | supported |
                    | key                           | supported | required
                    | text                          | supported |
@@ -63,6 +64,7 @@ __&lt;combo&gt;__            |                               | supported |
                    | values_searchable             | ignored   | all values are currently added to the index
                    | length                        | ignored   |
                    | values_no_i18n                | ignored   |
+                   | values_from                   | ignored   |
 __&lt;multiselect&gt;__      |                               | supported |
                    | key                           | supported | required
                    | text                          | supported |
@@ -80,6 +82,7 @@ __&lt;multiselect&gt;__      |                               | supported |
                    | values_searchable             | ignored   | all values are currently added to the index
                    | length                        | ignored   |
                    | values_no_i18n                | ignored   |
+                   | values_from                   | ignored   |
                    | rows                          | ignored   |
 __&lt;list_entry&gt;__       |                               | supported |   
                    | display_value                 | supported |
@@ -122,3 +125,7 @@ While the preset specification includes language specific text by prefixing the 
 
 For Vespucci I've chosen a different approach based on [GNU gettext](https://www.gnu.org/software/gettext/manual/gettext.html) format files, the simple [Preset2Pot](https://github.com/simonpoole/beautified-JOSM-preset/tree/master/src/ch/poole/presetutils) utility will generate a .pot file from a preset which you can use with one of the translation services to produce GNU gettext compatible translations of all the strings in the preset (excluding the actual key and value strings).
                  
+### Extensions
+
+* _deprecated_ only use this preset for matching, do not offer it for new use and do not find it when searched
+* _javascript_ execute the script if the value of this tag is empty, the script has access to and can modify the current tags and use the specified default value if any
