@@ -17,16 +17,19 @@
   <li>Way remains selected</li>
   <li>Drag handle</li>
   <li>.. and so on ...</li>
-</ul><p>The tradeoff is that now more care has to be exercised when dragging ways.</p><h2>Tag based filter</h2><p>The filter can be enable from the normal main menu, the filter can then be changed by tapping the filter icon.</p><p>The full change log is available here https://github.com/MarcusWolschon/osmeditor4android/commits/master </p><h2>Miscellaneous</h2>
+</ul><p>The tradeoff is that now more care has to be exercised when dragging ways.</p><h2>Tag based filter</h2><p>The filter can be enable from the normal main menu, the filter can then be changed by tapping the filter icon. More documentation can be found on device or <a href="https://github.com/MarcusWolschon/osmeditor4android/blob/master/documentation/docs/help/en/Tag%20filter.html">here</a>.</p><h2>Scripting</h2><p>Presets now support a "javascript" property that allows a script to manipulate tags, for example a "last_update" tag can be auto filled with the current date. Outside of the use in presets scripts can be run in an expanded mode via the "JS Console", this is currently of limited usefulness as there is no easy way to store and retrieve scripts, however it is intended to add that (and documentation) for release.</p><h2>Miscellaneous</h2>
 <ul>
   <li>the "Find" search function now supports Photon based geocoders. The default configuration of the OSMF Nominatim and komoots Photon instances can be changed in the advanced preferences.</li>
-</ul><h1>Known Problems</h1>
+  <li>presets support a "deprecated" property that allows them to be matched for the map display and in the form-based tag editor, but they are not offered and found for new use.</li>
+  <li>support for opening a photo viewer in the adjacent window on Android N and later.</li>
+  <li>a lot of work has been done to make it easier to contribute to Vespucci, this includes migrating to the new standard Android project layout, making more operations available via gradle tasks and adding tests for a substantial part of the code.</li>
+</ul><p>The full change log is available <a href="https://github.com/MarcusWolschon/osmeditor4android/commits/master">here</a></p><h1>Known Problems</h1>
 <ul>
   <li>Due to a change in the way Android N handles Uri that reference on device files currently photos that are not in the Vespucci folder cannot be displayed by clicking on them in the photo layer.</li>
 </ul><h1>Upgrading from previous Versions</h1>
 <ul>
   <li>The saved editing state file format has changed, please complete any edits before upgrading.</li>
-  <li>For known problems with the beta build please see https://github.com/MarcusWolschon/osmeditor4android/issues</li>
+  <li>For known problems with the beta build please see <a href="https://github.com/MarcusWolschon/osmeditor4android/issues">our issue tracker</a></li>
 </ul>
 </body>
 </html>
